--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -102,6 +102,42 @@ body {
     align-items: center;
 }
 
+.aceitar-cliente{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+    background-color:yellow;
+}
+
+.aceitar-cliente img {
+    max-width: 100%;
+    height: auto;
+    border:1px solid black;
+}
+.imagem-container {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    margin:auto;
+
+    border:1px solid black;
+}
+.botao-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 20px;
+    border:1px solid black;
+}
+.botao {
+    width: 100%;
+    margin: 0 10px;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
 @media (max-width: 768px) {
 
     html,
@@ -168,7 +204,19 @@ body {
     .distancia {
         font-size: 0.8em;
     }
+    /* Z-index ajustado para o modal */
+    .modal {
+        z-index: 2000;
+    }
+
+    .modal-backdrop {
+        z-index: 5;
+    }
+    .modalprofissional{
+        margin-top:23%;
+    }
 }
+
 
 .zoom-controls {
     position: absolute;
@@ -193,3 +241,5 @@ body {
 .search {
     position: relative;
 }
+
+
