--- a/public/assets/css/indexprofissional.css
+++ b/public/assets/css/indexprofissional.css
@@ -23,10 +23,10 @@ body {
 
 .container-mapa {
     display: flex;
-    height: 87vh; /* altura total do contêiner */
+    height: 87vh;
     width: 85vw;
     margin: 0 auto;
-    flex-wrap: nowrap; /* Não quebre para uma nova linha */
+    flex-wrap: nowrap;
 }
 
 #map {
@@ -38,7 +38,7 @@ body {
     z-index: 4;
 }
 
-.prestadores-container {
+.aceitar-container {
     display: flex;
     flex-direction: column;
     width: 30%;
@@ -104,10 +104,20 @@ body {
     align-items: center;
 }
 
+.aceitar-cliente {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+}
+
 .aceitar-cliente img {
     max-width: 100%;
     height: auto;
-    border: 1px solid black;
+}
+.hidden {
+    display: none;
 }
 
 .imagem-container {
@@ -115,7 +125,6 @@ body {
     justify-content: center;
     width: 50%;
     margin: auto;
-    border: 1px solid black;
 }
 
 .botao-container {
@@ -123,7 +132,6 @@ body {
     justify-content: space-between;
     width: 100%;
     margin-top: 20px;
-    border: 1px solid black;
 }
 
 .botao {
@@ -134,13 +142,14 @@ body {
     cursor: pointer;
 }
 
-
 .modal-backdrop {
     z-index: 1040; /* ou um valor inferior ao do modal */
 }
+
 .modal {
-     z-index: 1050; /* ou um valor maior */
- }
+    z-index: 1050; /* ou um valor maior */
+}
+
 @media (max-width: 768px) {
 
     html,
@@ -158,17 +167,22 @@ body {
         margin-bottom: 100%;
     }
 
+    .hidden {
+        display: none;
+    }
 
     #map {
-        height: 50vh;
+        height: 45vh;
         width: 100vw;
         margin: 0;
         order: 2;
     }
 
-    .prestadores-container {
+
+
+    .aceitar-container {
         width: 100%;
-        max-height: 23rem;
+        max-height: 26rem;
         margin: 0;
         position: fixed;
         bottom: 0;
@@ -198,6 +212,7 @@ body {
     .distancia {
         font-size: 0.8em;
     }
+
     .modal {
         z-index: 2000;
     }
@@ -209,6 +224,7 @@ body {
     .modalprofissional {
         margin-top: 23%;
     }
+
 }
 
 
